--- a/notebooks/nb_template.ipynb
+++ b/notebooks/nb_template.ipynb
@@ -20,7 +20,7 @@
     "- Luis Enrique Morales Flores (lukemorales13)\n",
     "- Emil Ehecatl Sánchez Olsen (Emilehecatlsanchez)\n",
     "- Fabián Herrera Barrón (FabianHeBa)\n",
-    "- Vania (Vania-Janet)\n",
+    "- Vania Janet Raya Rios (Vania-Janet)\n",
     "\n",
     "**Repositorio del equipo:**  \n",
     "<https://github.com/lukemorales13/Ensambles-de-Votaci-n-con-PokeAPI>\n",
@@ -73,14 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "32f8223d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "# DATASET_TRAIN_CSV = Path(\"train.csv\")  \n",
     "DATASET_TRAIN_CSV = Path(r\"..\\data\\dataset.csv\")  \n",
     "DATASET_TEST_CSV  = Path(r\"..\\data\\testset.csv\")   \n",
     "\n",
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "6cc32ad8",
    "metadata": {},
    "outputs": [
@@ -175,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "de4d23ec",
    "metadata": {},
    "outputs": [
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "id": "7b0eb5b7",
    "metadata": {},
    "outputs": [
@@ -249,34 +248,34 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>tree</td>\n",
-       "      <td>0.98</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.00</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.92</td>\n",
-       "      <td>0.958333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>svm</td>\n",
-       "      <td>0.92</td>\n",
+       "      <td>knn</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.00</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.68</td>\n",
-       "      <td>0.809524</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>logreg</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>0.900000</td>\n",
+       "      <td>svm</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.72</td>\n",
-       "      <td>0.800000</td>\n",
+       "      <td>0.837209</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>knn</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>0.888889</td>\n",
-       "      <td>0.64</td>\n",
-       "      <td>0.744186</td>\n",
+       "      <td>logreg</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.800000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -284,13 +283,13 @@
       ],
       "text/plain": [
        "    model  accuracy  precision  recall        f1\n",
-       "0    tree      0.98   1.000000    0.92  0.958333\n",
-       "1     svm      0.92   1.000000    0.68  0.809524\n",
-       "2  logreg      0.91   0.900000    0.72  0.800000\n",
-       "3     knn      0.89   0.888889    0.64  0.744186"
+       "0    tree      1.00        1.0    1.00  1.000000\n",
+       "1     knn      1.00        1.0    1.00  1.000000\n",
+       "2     svm      0.93        1.0    0.72  0.837209\n",
+       "3  logreg      0.91        0.9    0.72  0.800000"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "id": "82bcb5de",
    "metadata": {},
    "outputs": [
@@ -407,7 +406,7 @@
        "        0.29258002, 0.09715805, 0.01011629, 0.02958525, 0.26831658])}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "id": "1360654f",
    "metadata": {},
    "outputs": [
@@ -441,7 +440,7 @@
        "{'tree': 0.98, 'svm': 0.92, 'logreg': 0.91, 'knn': 0.89}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "id": "846e6cdd",
    "metadata": {},
    "outputs": [
@@ -691,7 +690,7 @@
        "2      hard      0.92        1.0    0.68  0.809524"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "id": "d91b6872",
    "metadata": {},
    "outputs": [
@@ -802,34 +801,13 @@
        "2      hard      0.92        1.0    0.68  0.809524"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ens_metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "4d7d005f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      voter  accuracy  precision  recall        f1\n",
-      "0      soft      0.96        1.0    0.84  0.913043\n",
-      "1  weighted      0.96        1.0    0.84  0.913043\n",
-      "2      hard      0.92        1.0    0.68  0.809524\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ens_metrics)"
    ]
   },
   {
@@ -845,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "id": "53b2a55b",
    "metadata": {},
    "outputs": [
@@ -877,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "id": "24d14ca8",
    "metadata": {},
    "outputs": [
@@ -894,7 +872,7 @@
        "WindowsPath('predicciones_competencia.csv')"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "id": "0796ede1",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1008,7 @@
        "4  931       0         NaN                NaN"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
